<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.reuniozinha.ui.activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.reuniozinha.ui.activities.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_visao_mensal_eventos" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.reuniozinha.ui.activities.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_fazer_reservas" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.reuniozinha.ui.activities.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_cadastrar_sala" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.reuniozinha.ui.activities.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_compartilhar_evento" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.reuniozinha.ui.activities.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_enviar_convite_evento" />
</navigation>